build searchable options — not in EDT, cleanup around
GitOrigin-RevId: 17dc12b6adf6b53d54c77c7178092dfa99a755dd